verif/test/deca/codegen/invalid/loops/double-count-verif.res
src/test/deca/codegen/invalid/loops/double-count.deca:8:12: no viable alternative at input 'i'
